gcc/testsuite/algol68/compile/error-stropping-keyword-4.a68
# { dg-options "-fstropping=upper" }  #
BEGIN IF THEN 10 ELSE 20 FI # { dg-error "IF" } #
END
